add price home_select_product_list

--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -142,7 +142,8 @@
                                 <img src="${product.image_product}" alt="productimage" class="img-fluid" />
                             </figure>
                             <label>
-                                ไลท์วูด<br> (Litewood by Fameline)
+                                ${product.name}
+                                <p class="text-danger"> ${product.price}  บาท </p>
                             </label>
                         </div>
                     </div>
