--- a/intearctive-mode-template/pages/roof_product_list.html
+++ b/intearctive-mode-template/pages/roof_product_list.html
@@ -222,7 +222,7 @@
                                     <img src="${product.image_product}" alt="productimage" class="img-fluid" />
                                 </figure>
                                 <label>
-                                    ไลท์วูด<br> (Litewood by Fameline)
+                                    ${product.name}
                                 </label>
                             </div>
                         </div>
