add qrcode footer and change bg color 1st page

--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -121,15 +121,15 @@
                 <div class="footer-right-content d-flex flex-column">
                     <div class="group-qr-code-footer">
                         <div class="qr-box-footer shadow">
-                            <p> <img src="../images/fb-logo.png" alt=""> Facebook </p> <img src="../images/qrcode.png"
+                            <p> <img src="../images/fb-logo.png" alt=""> Facebook </p> <img src="../images/qr-fb.png"
                                 alt="">
                         </div>
                         <div class="qr-box-footer shadow">
-                            <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qrcode.png"
+                            <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qr-ig.png"
                                 alt="">
                         </div>
                         <div class="qr-box-footer shadow">
-                            <p> <img src="../images/yt-logo.png" alt=""> Youtube </p> <img src="../images/qrcode.png"
+                            <p> <img src="../images/yt-logo.png" alt=""> Youtube </p> <img src="../images/qr-yt.png"
                                 alt="">
                         </div>
                     </div>
