--- a/intearctive-mode-template/pages/roof_product_details.html
+++ b/intearctive-mode-template/pages/roof_product_details.html
@@ -42,7 +42,7 @@
                 <i class="icon-back"></i>
             </button>
             <!-- Inner Content -->
-            <div class="inner-content">
+            <div class="inner-content" style="margin-top: -60px;">
                 <div class="img-gallery">
                     <div class="row">
                         <div class="col-6 product-image-corosel ">
@@ -176,15 +176,15 @@
                 <div class="footer-right-content d-flex flex-column">
                     <div class="group-qr-code-footer">
                         <div class="qr-box-footer shadow">
-                            <p> <img src="../images/fb-logo.png" alt=""> Facebook </p> <img src="../images/qrcode.png"
+                            <p> <img src="../images/fb-logo.png" alt=""> Facebook </p> <img src="../images/qr-fb.png"
                                 alt="">
                         </div>
                         <div class="qr-box-footer shadow">
-                            <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qrcode.png"
+                            <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qr-ig.png"
                                 alt="">
                         </div>
                         <div class="qr-box-footer shadow">
-                            <p> <img src="../images/yt-logo.png" alt=""> Youtube </p> <img src="../images/qrcode.png"
+                            <p> <img src="../images/yt-logo.png" alt=""> Youtube </p> <img src="../images/qr-yt.png"
                                 alt="">
                         </div>
                     </div>
