edit max height in product list page

--- a/intearctive-mode-template/pages/roof_product_list.html
+++ b/intearctive-mode-template/pages/roof_product_list.html
@@ -189,7 +189,7 @@
                 // let content_id = `content_${main_menu}`
                 $('#productlist-container').append(`
                     <div id="${content_id}" class="tab-pane fade show" role="tabpanel" aria-labelledby="${nav_id}">
-                        <div class="productlist-wrapper mt-0">
+                        <div class="productlist-wrapper mt-0" style="max-height:calc(100vh - 150px);">
                         </div>
                     </div>   
                 `)
