--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -44,7 +44,7 @@
             <div class="data-ceilingnwall"
                 style="height:950px; background: #F3F3F3; box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.12); border-radius: 6px; over-flowy:scroll; over-flowx:hidden;">
                 <div class="tab-content" style="height:690px; overflow: visible;" id="productlist-container">
-                    <div class="productlist-wrapper" id="products-content">
+                    <div class="productlist-wrapper" id="products-content" style="max-height:calc(100vh - 150px);">
                     </div>
                     <!--  ใส่ content จาก js/jquery -->
                     <!-- <div id="test1" class="tab-pane fade show active" role="tabpanel" aria-labelledby="nav-test1">
