--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -142,7 +142,7 @@
                                 <img src="${product.image_product}" alt="productimage" class="img-fluid" />
                             </figure>
                             <label>
-                                ${product.name}
+                                <p style="width: 150px; overflow: hidden;  text-overflow: ellipsis; line-height: 1.5em; height: 3em; word-wrap: break-word;">${product.name}</p>
                                 <p class="text-danger"> ${product.price}  บาท </p>
                             </label>
                         </div>
