edit config and style template2 modal

--- a/intearctive-mode-template/pages/roof_template2.html
+++ b/intearctive-mode-template/pages/roof_template2.html
@@ -51,7 +51,7 @@
                             <div class="top-banner"><img id="modal-image" src="../images/bg-header-red.jpg"
                                     style="width: 100%; height: 100%;"></div>
                             <div class="data row">
-                                <div class="col-8">
+                                <div class="col-10">
                                     <h2 id="modal-topic">เตรียมพบกับ Flash Sale 13:00 - 15:00</h2>
                                     <h6 id="modal-zone"><i class="icon-location me-2"></i>ชั้น 1 โซน Care Living
                                         Solution</h6>
@@ -62,13 +62,13 @@
                                         ระบายความร้อนภายใน บ้าน และที่สำคัญยังช่วยประหยัดไฟอีกด้วย ร้อนนี้ SCG Home
                                         Onlineยกสินค้าพร้อม</p>
                                 </div>
-                                <div class="col-4 data-right">
+                                <div class="col-2 data-right">
                                     <div class="d-flex puchase-options ">
-                                        <div class="  puchase-option2 options qrcode" type="button">
+                                        <!-- <div class="  puchase-option2 options qrcode" type="button">
                                             <h6>แสกนรับสิทธิ์
                                             </h6>
                                             <img id="modal-qrcode" src="../images/qrcode.png" />
-                                        </div>
+                                        </div> -->
                                     </div>
                                     <button class="btn btn-rednew" data-bs-dismiss="modal"> <i class="icon-close"></i>
                                         <span>ปิดหน้าต่าง</span></button>
