--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -51,7 +51,7 @@
                             <div class="top-banner"><img id="modal-image" src="../images/bg-header-red.jpg"
                                     style="width: 100%; height: 100%;"></div>
                             <div class="data row">
-                                <div class="col-8">
+                                <div class="col-10">
                                     <h2 id="modal-topic">เตรียมพบกับ Flash Sale 13:00 - 15:00</h2>
                                     <h6 id="modal-zone"><i class="icon-location me-2"></i>ชั้น 1 โซน Care Living
                                         Solution</h6>
@@ -62,13 +62,13 @@
                                         ระบายความร้อนภายใน บ้าน และที่สำคัญยังช่วยประหยัดไฟอีกด้วย ร้อนนี้ SCG Home
                                         Onlineยกสินค้าพร้อม</p>
                                 </div>
-                                <div class="col-4 data-right">
+                                <div class="col-2 data-right">
                                     <div class="d-flex puchase-options ">
-                                        <div class="  puchase-option2 options qrcode" type="button">
+                                        <!-- <div class="  puchase-option2 options qrcode" type="button">
                                             <h6>แสกนรับสิทธิ์
                                             </h6>
                                             <img id="modal-qrcode" src="../images/qrcode.png" />
-                                        </div>
+                                        </div> -->
                                     </div>
                                     <button class="btn btn-rednew" data-bs-dismiss="modal"> <i class="icon-close"></i>
                                         <span>ปิดหน้าต่าง</span></button>
@@ -156,7 +156,7 @@
                 for (var i = 0; i < jd.page.ceiling_and_wall.promotion.videos.length; i++) {
                     $('#video-banner source').attr('src', jd.page.ceiling_and_wall.promotion.videos[i].url)
                     $('#video-banner').click(function () {
-                        window.location.href = jd.page.roof.promotion.videos[i].pagelinked
+                        window.location.href = jd.page.ceiling_and_wall.promotion.videos[i].pagelinked
                     })
                     $("#video-banner")[0].load();
                     $("#video-banner")[0].play();
@@ -187,11 +187,11 @@
 
             $('#promotion-banner').click(function () {
                 let index = $('#modal-id').text()
-                $('#modal-image').attr('src', jd.page.roof.promotion.banner[index].url)
-                $('#modal-topic').html(jd.page.roof.promotion.banner[index].topic)
-                $('#modal-zone').html(jd.page.roof.promotion.banner[index].zone)
-                $('#modal-desc').html(jd.page.roof.promotion.banner[index].content)
-                $('#modal-qrcode').attr('src', jd.page.roof.promotion.banner[index].qrcode)
+                $('#modal-image').attr('src', jd.page.ceiling_and_wall.promotion.banner[index].url)
+                $('#modal-topic').html(jd.page.ceiling_and_wall.promotion.banner[index].topic)
+                $('#modal-zone').html(jd.page.ceiling_and_wall.promotion.banner[index].zone)
+                $('#modal-desc').html(jd.page.ceiling_and_wall.promotion.banner[index].content)
+                $('#modal-qrcode').attr('src', jd.page.ceiling_and_wall.promotion.banner[index].qrcode)
             })
 
             playAllVideo()
