--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -148,7 +148,7 @@
 
                 $(`#${content_id}`).prepend(`
                     <div class="banner-section">
-                        <video width="100%" height="100%" autoplay muted>
+                        <video width="100%" height="100%" autoplay muted loop>
                             <source src="${main_menu_obj.banner_video}" type="video/mp4">
                             <source src="movie.ogg" type="video/ogg">
                             Your browser does not support the video tag.
