fix overflow product list

--- a/intearctive-mode-template/pages/roof_product_list.html
+++ b/intearctive-mode-template/pages/roof_product_list.html
@@ -55,7 +55,7 @@
                 </div>
            
 
-                <div class="tab-content" style="height:690px; overflow: visible;" id="productlist-container">
+                <div class="tab-content" style="height:690px;" id="productlist-container">
                     <!--  ใส่ content จาก js/jquery -->
 
                 </div>
