--- a/intearctive-mode-template/pages/cw_product_list.html
+++ b/intearctive-mode-template/pages/cw_product_list.html
@@ -54,7 +54,7 @@
                     </figure>
                 </div>
 
-                <div class="tab-content" style="height:690px; overflow: visible;" id="productlist-container">
+                <div class="tab-content" style="height:690px;" id="productlist-container">
                     <!--  ใส่ content จาก js/jquery -->
                 </div>
 
