implement flash sale change header

--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -14,7 +14,7 @@
 
 <body style="width: 1080px; height: 1920px;">
   <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
-    <div class="top-panel-custom2 d-flex justify-content-center align-items-center">
+    <div class="top-panel-custom2 d-flex justify-content-center align-items-center" id="header">
       <div class="position-absolute">
         <div class='d-flex justify-content-center'>
           <h4>กลุ่มสินค้า</h4>
@@ -70,12 +70,29 @@
       <div class="footer-left"> <img class="logo-scg-exp" src="../images/logo-scgexperience.png" alt=""> </div>
     </div>
 
-
   </main>
   <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 <script>
   $(document).ready(function () {
+
+    // Flash Sale Banner
+    setInterval(function () {
+      var today = new Date();
+      var time = today.getHours().toString().padStart(2, '0') + ":" + today.getMinutes().toString().padStart(2, '0');
+      if ((time >= "11:15" && time < "12:00") || (time >= "14:15" && time < "15:00") || (time >= "18:00" && time < "18:45")) {
+        if ($('#header').find($('#flash-header')).length == 0) {
+          $('#header').append(`
+        <div id="flash-header" style="position: absolute; width: 100%; height: 220px; background-color:black;">
+        <video width="100%" height="100%" autoplay muted loop>
+          <source src="../media/L2_C&W/Flash sale Banner/35_Flash Sale_200.mp4" type="video/mp4">
+        </video>
+      </div>`)
+        }
+      } else {
+        $('#flash-header').remove()
+      }
+    }, 1000);
 
     $(`#btn-product-list`).click(() => {
       window.location.href = 'cw_product_list.html'
