--- a/intearctive-mode-template/pages/home_select_template1.html
+++ b/intearctive-mode-template/pages/home_select_template1.html
@@ -2,111 +2,133 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template 1</title>
-  <link rel="stylesheet" href="../css/main.min.css" />
-  <link rel="stylesheet" href="../css/custom/global_custom.css" />
-  <link rel="stylesheet" href="../css/custom/template1.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Template 1</title>
+    <link rel="stylesheet" href="../css/main.min.css" />
+    <link rel="stylesheet" href="../css/custom/global_custom.css" />
+    <link rel="stylesheet" href="../css/custom/template1.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body style="width: 1080px; height: 1920px;">
-  <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
-    <div class="top-panel-custom2 d-flex justify-content-center align-items-center">
-      <div class="position-absolute">
-        <div class='d-flex justify-content-center'>
-          <h4>โซน</h4>
-          <h3>Home Selected</h3>
+    <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
+        <div class="top-panel-custom2 d-flex justify-content-center align-items-center" id="header">
+            <div class="position-absolute">
+                <div class='d-flex justify-content-center'>
+                    <h4>โซน</h4>
+                    <h3>Home Selected</h3>
+                </div>
+                <div class='d-flex justify-content-center pt-4'>
+                    <p>คัดสรรสินค้าทั้งไทยและต่างประเทศมาไว้ที่นี้</p>
+                </div>\
+            </div>
         </div>
-        <div class='d-flex justify-content-center pt-4'>
-          <p>คัดสรรสินค้าทั้งไทยและต่างประเทศมาไว้ที่นี้</p>
-        </div>\
-      </div>
-    </div>
-    <div class="template1-content-panel position-relative ">
-      <div id="home-select-video-panel" class="template1-video-panel">
-        <video width="100%" height="100%" autoplay muted>
-          <source src="" type="video/mp4">
-          <!-- <source src="movie.ogg" type="video/ogg"> -->
-          Your browser does not support the video tag.
-        </video>
-      </div>
-      <div class="d-flex align-items-center justify-content-center pt-5">
-        <button type="button" class="btn btn-secondary btn-template1 d-flex align-items-center justify-content-center"
-          id="btn-product-list">
-          <h1> แตะเพื่อ <img src="../images/touch_app.png" alt=""> ดูรายการสินค้า </h1>
-        </button>
-      </div>
-
-    </div>
-
-    <div class="template1-footer">
-      <div class="footer-right">
-        <div class="footer-right-content d-flex flex-column">
-          <div class="group-qr-code-footer">
-            <div class="qr-box-footer shadow">
-              <p> <img src="../images/fb-logo.png" alt=""> Facebook </p> <img src="../images/qr-fb.png" alt="">
+        <div class="template1-content-panel position-relative ">
+            <div id="home-select-video-panel" class="template1-video-panel">
+                <video width="100%" height="100%" autoplay muted>
+                    <source src="" type="video/mp4">
+                    <!-- <source src="movie.ogg" type="video/ogg"> -->
+                    Your browser does not support the video tag.
+                </video>
             </div>
-            <div class="qr-box-footer shadow">
-              <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qr-ig.png" alt="">
+            <div class="d-flex align-items-center justify-content-center pt-5">
+                <button type="button"
+                    class="btn btn-secondary btn-template1 d-flex align-items-center justify-content-center"
+                    id="btn-product-list">
+                    <h1> แตะเพื่อ <img src="../images/touch_app.png" alt=""> ดูรายการสินค้า </h1>
+                </button>
             </div>
-            <div class="qr-box-footer shadow">
-              <p> <img src="../images/yt-logo.png" alt=""> Youtube </p> <img src="../images/qr-yt.png" alt="">
-            </div>
-          </div>
-          <div class="footer-text-right mt-5">
-            <h1> รับข่าวสารและโปรโมชั่นก่อนใคร </h1>
-            <h1>ผ่านช่องทาง Social Media <h1 class="text-footer-highlight"> SCGHOMEExperience </h1>
-              </>
-
-          </div>
 
         </div>
-      </div>
 
-      <div class="footer-left"> <img class="logo-scg-exp" src="../images/logo-scgexperience.png" alt=""> </div>
-    </div>
+        <div class="template1-footer">
+            <div class="footer-right">
+                <div class="footer-right-content d-flex flex-column">
+                    <div class="group-qr-code-footer">
+                        <div class="qr-box-footer shadow">
+                            <p> <img src="../images/fb-logo.png" alt=""> Facebook </p> <img src="../images/qr-fb.png"
+                                alt="">
+                        </div>
+                        <div class="qr-box-footer shadow">
+                            <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qr-ig.png"
+                                alt="">
+                        </div>
+                        <div class="qr-box-footer shadow">
+                            <p> <img src="../images/yt-logo.png" alt=""> Youtube </p> <img src="../images/qr-yt.png"
+                                alt="">
+                        </div>
+                    </div>
+                    <div class="footer-text-right mt-5">
+                        <h1> รับข่าวสารและโปรโมชั่นก่อนใคร </h1>
+                        <h1>ผ่านช่องทาง Social Media <h1 class="text-footer-highlight"> SCGHOMEExperience </h1>
+                            </>
+
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="footer-left"> <img class="logo-scg-exp" src="../images/logo-scgexperience.png" alt=""> </div>
+        </div>
 
 
-  </main>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    </main>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 <script>
-  $(document).ready(function () {
+    $(document).ready(function () {
 
-    $(`#btn-product-list`).click(() => {
-      window.location.href = 'home_select_product_list.html'
-    })
+        // Flash Sale Banner
+        setInterval(function () {
+            var today = new Date();
+            var time = today.getHours().toString().padStart(2, '0') + ":" + today.getMinutes().toString().padStart(2, '0');
+            if ((time >= "11:15" && time < "12:00") || (time >= "14:15" && time < "15:00") || (time >= "18:00" && time < "18:45")) {
+                if ($('#header').find($('#flash-header')).length == 0) {
+                    $('#header').append(`
+                <div id="flash-header" style="position: absolute; width: 100%; height: 220px; background-color:black;">
+                    <video width="100%" height="100%" autoplay muted loop>
+                        <source src="../media/L2_C&W/Flash sale Banner/35_Flash Sale_200.mp4" type="video/mp4">
+                    </video>
+                </div>`)
+                }
+            } else {
+                $('#flash-header').remove()
+            }
+        }, 1000);
 
-    $.getJSON('../configs.json', function (jd) {
+        $(`#btn-product-list`).click(() => {
+            window.location.href = 'home_select_product_list.html'
+        })
+
+        $.getJSON('../configs.json', function (jd) {
 
 
-      const play = (video_url, vid_duration) =>
-        new Promise(resolve =>
-          setTimeout(() => resolve(video_url), vid_duration * 1000)
-        );
+            const play = (video_url, vid_duration) =>
+                new Promise(resolve =>
+                    setTimeout(() => resolve(video_url), vid_duration * 1000)
+                );
 
-      const playAllVideo = async () => {
-        for (var i = 0; i < jd.page.home_selected.front.videos.length; i++) {
-          $('#home-select-video-panel source').attr('src', jd.page.home_selected.front.videos[i].url)
-          $("#home-select-video-panel video")[0].load();
-          $("#home-select-video-panel video")[0].play();
-          console.log('play video')
-          const video_url = await play(jd.page.home_selected.front.videos[i].url, jd.page.home_selected.front.videos[i].duration);
-          console.log(`video  ${video_url} were played`);
+            const playAllVideo = async () => {
+                for (var i = 0; i < jd.page.home_selected.front.videos.length; i++) {
+                    $('#home-select-video-panel source').attr('src', jd.page.home_selected.front.videos[i].url)
+                    $("#home-select-video-panel video")[0].load();
+                    $("#home-select-video-panel video")[0].play();
+                    console.log('play video')
+                    const video_url = await play(jd.page.home_selected.front.videos[i].url, jd.page.home_selected.front.videos[i].duration);
+                    console.log(`video  ${video_url} were played`);
 
-        }
-        console.log('All videos were played');
-        $("#home-select-video-panel video")[0].pause();
-        window.location.href = 'home_select_template2.html'
-      };
-      playAllVideo()
-    }).fail(function () {
-      console.log('fail')
+                }
+                console.log('All videos were played');
+                $("#home-select-video-panel video")[0].pause();
+                window.location.href = 'home_select_template2.html'
+            };
+            playAllVideo()
+        }).fail(function () {
+            console.log('fail')
+        });
     });
-  });
 </script>
 
 </html>
