update line height

--- a/intearctive-mode-template/pages/home_select_product_details.html
+++ b/intearctive-mode-template/pages/home_select_product_details.html
@@ -62,10 +62,10 @@
                             <h6 id="skuid">รหัสสินค้า 8857126925012</h6>
                             <h2 id="productname">Bewell เบาะรองหลัง Ergo-Cushion
                                 Serie Back EC-01 (Cooling Cotton)</h2>
-                            <label id="tagline">Bewel</label>
+                            <label id="tagline" style="line-height:22px; margin-top:1rem;">Bewel</label>
                             <p id="price" class="position-relative"><span>ราคา</span>1,490 บาท <a href="#"
                                     id="delivery_tag">สินค้าจัดส่งที่บ้าน</a></p>
-                            <ul style="list-style:none; margin-left:0px; padding-left: 0px;">
+                            <ul style="list-style:none; margin-left:0px; padding-left: 0px; margin-top:0px">
                                 <li id="desc">สายรัดกับเก้าอี้ให้ปรับระดับได้ <br>เพื่อปรับให้เข้า</li>
                             </ul>
                             <div class="d-flex puchase-options">
