--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -9,20 +9,22 @@
   <link rel="stylesheet" href="../css/main.min.css" />
   <link rel="stylesheet" href="../css/custom/global_custom.css" />
   <link rel="stylesheet" href="../css/custom/template1.css" />
+  <link rel="stylesheet" href="../css/custom/cw_header.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <body style="width: 1080px; height: 1920px;">
   <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
-    <div class="top-panel-custom2 d-flex justify-content-center align-items-center" id="header">
-      <div class="position-absolute">
-        <div class='d-flex justify-content-center'>
-          <h4>กลุ่มสินค้า</h4>
-          <h3>CEILING & WALL</h3>
+    <div class="top-panel-custom2 d-flex justify-content-left align-items-center position-relative" id="header">
+      <img id="cw-header-logo" src="../images/DECAAR_LOGO PLACEMENT_WHITE 2.png">
+      <div class="header-content">
+        <div class='d-flex justify-content-left'>
+          <h3>กลุ่มสินค้าและโซลูชั่นการตกแต่งภายนอก</h3>
+          <!-- <h4>ดูแลครบจบทุกการออกแบบบ้านและอาคาร</h4> -->
         </div>
-        <div class='d-flex justify-content-center pt-4'>
+        <div class='d-flex justify-content-left pt-4'>
           <p>ดูแลครบ จบทุกการออกแบบบ้านและอาคาร </p>
-        </div>\
+        </div>
       </div>
 
     </div>
