--- a/mobile/index.html
+++ b/mobile/index.html
@@ -59,7 +59,7 @@
         <div class="row gy-3">
           <div class="col status">
             <label for="inputphone" class="form-label">หมายเลขโทรศัพท์ <span class="star">*</span></label>
-            <input type="number" class="form-control" placeholder="xxx-xxx-xxxx" aria-label="กรอกชื่อ" id="contact-phone" name="phone number" maxlength="10" onkeydown="phonenumberFormatter()" onkeyup="validateForm()">
+            <input type="number" class="form-control" placeholder="xxx-xxx-xxxx" aria-label="กรอกชื่อ" id="contact-phone" name="phone number" maxlength="10" onkeyup="validateForm()">
             <i class="fas fa-check-circle"></i>
             <span class="error-style" id="phone-error"></span>
           </div>
