edit all header page

--- a/intearctive-mode-template/pages/home_select_product_details.html
+++ b/intearctive-mode-template/pages/home_select_product_details.html
@@ -29,10 +29,10 @@
         style="height: 1700px; background: url(/intearctive-mode-template/images/bg-main.png);">
         <!-- Quote -->
         <div class="quote-section  strip1">
-            <p><em>“</em> <span class="txt-red">แตะที่หน้าจอ</span> <br>
-                เพื่อเลือกดูสินค้าที่สนใจได้เลยค่ะ <em>”</em></p>
+            <p><em>“</em> <span class="txt-red">หากสนใจ</span>
+                คุณลูกค้าสามารถแจ้งพนักงานหรือสั่งซื้อออนไลน์ได้เลยค่ะ<em>”</em></p>
             <figure>
-                <img src="../images/girl-big.png" class="img-fluid" alt="girl with tab" id="girl-header"/>
+                <img src="../images/girl-big.png" class="img-fluid" alt="girl with tab" id="girl-header" />
             </figure>
         </div>
 
