--- a/intearctive-mode-template/pages/roof_product_list.html
+++ b/intearctive-mode-template/pages/roof_product_list.html
@@ -29,8 +29,8 @@
         <!-- Quote -->
         <div class="quote-section  strip1" style="background: transparent;">
             <p><em>“</em>
-                <span>สัมผัสหน้าจอ</span> เพื่อเลือก <br>
-                ดูสินค้าที่สนใจได้เลยค่ะ
+                <span>แตะที่หน้าจอ</span><br>
+                เพื่อดูรายละเอียดสินค้าได้เลยค่ะ
                 <em>”</em>
             </p>
             <figure>
