--- a/intearctive-mode-template/pages/roof_template2.html
+++ b/intearctive-mode-template/pages/roof_template2.html
@@ -17,8 +17,9 @@
     <!-- Header -->
     <header class="site-header w-100 header-vb plain" id="header">
         <div class="top-panel">
-            <h4>คุณอยู่ที่</h4>
-            <h3>ROOF</h3>
+            <!-- <h4>สร้างบ้านใหม่ หรือมีปัญหาหลังคารั่วร้าว บ้านร้อน ค่าไฟแพง</h4> -->
+            <h3 style="font-size: 35px;">สร้างบ้านใหม่ หรือมีปัญหาหลังคารั่วร้าว บ้านร้อน ค่าไฟแพง</h3>
+            <h3 style="font-size: 45px;">SCG Roof Expert มีคำตอบ</h3>
         </div>
 
     </header>
@@ -29,12 +30,13 @@
         <!-- Quote -->
         <div class="quote-section  strip1" style="background: transparent;">
             <p><em>“</em>
-                <span>สัมผัสหน้าจอ</span> เพื่อเลือก <br>
-                ดูสินค้าที่สนใจได้เลยค่ะ
+                <span>สัมผัสหน้าจอ</span><br>
+                เพื่อเลือกดูสินค้าที่สนใจได้เลยค่ะ
                 <em>”</em>
             </p>
             <figure>
-                <img src="../images/girl-big.png" class="img-fluid" alt="girl with tab" id="girl-header"/>
+                <img src="../images/girl-big.png" class="img-fluid" alt="girl with tab" id="girl-header"
+                    style="width: 200px; height: 280px;" />
             </figure>
         </div>
 
