--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -17,19 +17,19 @@
 <body style="width: 1080px; height: 1920px;">
     <!-- Header -->
     <!-- <header class="site-header w-100 header-vb plain" id="header"> -->
-        <div class="top-panel-custom2 d-flex justify-content-left align-items-center position-relative" id="header">
-            <img id="cw-header-logo" src="../images/DECAAR_LOGO PLACEMENT_WHITE 2.png">
-            <div class="header-content">
-              <div class='d-flex justify-content-left'>
+    <div class="top-panel-custom2 d-flex justify-content-left align-items-center position-relative" id="header">
+        <img id="cw-header-logo" src="../images/DECAAR_LOGO PLACEMENT_WHITE 2.png">
+        <div class="header-content">
+            <div class='d-flex justify-content-left'>
                 <h3>กลุ่มสินค้าและโซลูชั่นการตกแต่งภายนอก</h3>
                 <!-- <h4>ดูแลครบจบทุกการออกแบบบ้านและอาคาร</h4> -->
-              </div>
-              <div class='d-flex justify-content-left pt-4'>
-                <p>ดูแลครบ จบทุกการออกแบบบ้านและอาคาร </p>
-              </div>
             </div>
-      
-          </div>
+            <div class='d-flex justify-content-left pt-4'>
+                <p>ดูแลครบ จบทุกการออกแบบบ้านและอาคาร </p>
+            </div>
+        </div>
+
+    </div>
 
     <!-- </header> -->
 
@@ -39,12 +39,13 @@
         <!-- Quote -->
         <div class="quote-section  strip1" style="background: transparent;">
             <p><em>“</em>
-                <span>สัมผัสหน้าจอ</span> เพื่อเลือก <br>
-                ดูสินค้าที่สนใจได้เลยค่ะ
+                <span>สัมผัสหน้าจอ</span><br>
+                เพื่อเลือกดูสินค้าที่สนใจได้เลยค่ะ
                 <em>”</em>
             </p>
             <figure>
-                <img src="../images/girl-big.png" class="img-fluid" alt="girl with tab" id="girl-header" />
+                <img src="../images/girl-big.png" class="img-fluid" alt="girl with tab" id="girl-header"
+                    style="width: 200px; height: 280px;" />
             </figure>
         </div>
 
@@ -158,7 +159,7 @@
         setInterval(function () {
             var today = new Date();
             var time = today.getHours().toString().padStart(2, '0') + ":" + today.getMinutes().toString().padStart(2, '0');
-            if ((time >= "11:15" && time < "12:00") || (time >= "14:15" && time < "15:00") || (time >= "18:00" && time < "18:45")) {
+            if ((time >= "11:15" && time < "12:00") || (time >= "14:15" && time < "15:00") || (time >= "18:00" && time < "22:45")) {
                 if ($('#header').find($('#flash-header')).length == 0) {
                     $('#header').append(`
                 <div id="flash-header" style="position: absolute; width: 100%; height: 220px; background-color:black;">
