--- a/intearctive-mode-template/pages/home_select_template1.html
+++ b/intearctive-mode-template/pages/home_select_template1.html
@@ -18,7 +18,7 @@
             <div class="position-absolute">
                 <div class='d-flex justify-content-center'>
                     <h4>โซน</h4>
-                    <h3>Home Selected</h3>
+                    <h3>HOME SELECTED</h3>
                 </div>
                 <div class='d-flex justify-content-center pt-4'>
                     <p>คัดสรรสินค้าทั้งไทยและต่างประเทศมาไว้ที่นี้</p>
