--- a/intearctive-mode-template/pages/roof_template1.html
+++ b/intearctive-mode-template/pages/roof_template1.html
@@ -17,12 +17,12 @@
     <div class="top-panel-custom2 d-flex justify-content-center align-items-center" id="header">
       <div class="position-absolute">
         <div class='d-flex justify-content-center'>
-          <h4>กลุ่มสินค้า</h4>
-          <h3>ROOF</h3>
+          <h3 style="font-size: 45px;">SCG Roof Expert นวัตกรรมหลังคา</h3>
+          <!-- <h3>ROOF</h3> -->
         </div>
         <div class='d-flex justify-content-center pt-4'>
-          <p> นวัตกรรมหลังคา เพื่อบ้านอยู่สบาย ประหยัดพลังงาน </p>
-        </div>\
+          <p> เพื่อบ้านอยู่สบาย ประหยัดพลังงาน </p>
+        </div>
       </div>
 
     </div>
