add qrcode to banner modal

--- a/intearctive-mode-template/pages/cw_template2.html
+++ b/intearctive-mode-template/pages/cw_template2.html
@@ -75,11 +75,12 @@
                                 </div>
                                 <div class="col-2 data-right">
                                     <div class="d-flex puchase-options ">
-                                        <!-- <div class="  puchase-option2 options qrcode" type="button">
+                                        <div class="  puchase-option2 options qrcode" style="padding-top: 0px;"
+                                            type="button">
                                             <h6>แสกนรับสิทธิ์
                                             </h6>
-                                            <img id="modal-qrcode" src="../images/qrcode.png" />
-                                        </div> -->
+                                            <img id="modal-qrcode" src="../images/qr-banner-modal.png" />
+                                        </div>
                                     </div>
                                     <button class="btn btn-rednew" data-bs-dismiss="modal"> <i class="icon-close"></i>
                                         <span>ปิดหน้าต่าง</span></button>
@@ -225,7 +226,7 @@
                 $('#modal-topic').html(jd.page.ceiling_and_wall.promotion.banner[index].topic)
                 $('#modal-zone').html(jd.page.ceiling_and_wall.promotion.banner[index].zone)
                 $('#modal-desc').html(jd.page.ceiling_and_wall.promotion.banner[index].content)
-                $('#modal-qrcode').attr('src', jd.page.ceiling_and_wall.promotion.banner[index].qrcode)
+                // $('#modal-qrcode').attr('src', jd.page.ceiling_and_wall.promotion.banner[index].qrcode)
             })
 
             playAllVideo()
