--- a/intearctive-mode-template/pages/home_select_product_list.html
+++ b/intearctive-mode-template/pages/home_select_product_list.html
@@ -34,7 +34,7 @@
                 <em>”</em>
             </p>
             <figure>
-                <img src="../images/girl-big.png" class="img-fluid" alt="girl with tab" id="girl-header"/>
+                <img src="../images/girl-big.png" class="img-fluid" alt="girl with tab" id="girl-header" style="margin-bottom: -25px;"/>
             </figure>
         </div>
 
@@ -146,11 +146,13 @@
                     </video>
                 </div>`
                     )
-                    $('#girl-header').css('height', '200px')
+                    $('#girl-header').css('height', '220px')
+                    $('#girl-header').css('width', '160px')
                 }
             } else {
                 $('#flash-header').remove()
                 $('#girl-header').css('height', 'auto')
+                $('#girl-header').css('max-width', '100%')
             }
         }, 1000);
 
