--- a/intearctive-mode-template/pages/roof_product_details.html
+++ b/intearctive-mode-template/pages/roof_product_details.html
@@ -174,7 +174,7 @@
                     console.log('loop product content ')
                     console.log(content_link)
                     console.log(content_link_index)
-                    if (content_link.endsWith('jpg') || content_link.endsWith('png') || content_link.endsWith('svg')) {
+                    if (content_link.endsWith('jpg') || content_link.endsWith('png') || content_link.endsWith('svg') || content_link.endsWith('gif')) {
                         console.log('is image')
                         $('#slide-button').append(`
                             <div type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="${content_link_index}"
